testsuite/tests/driver/werror.stderr

werror.hs:6:1: warning:
    Top-level binding with no type signature: main :: IO ()

werror.hs:7:13: warning:
    This binding for ‘main’ shadows the existing binding
      defined at werror.hs:6:1

werror.hs:7:13: warning: Defined but not used: ‘main’

werror.hs:8:1: warning:
    Tab character found here.
    Please use spaces instead.

werror.hs:10:1: warning: Defined but not used: ‘f’

werror.hs:10:1: warning:
    Top-level binding with no type signature:
      f :: forall t t1. [t] -> [t1]

werror.hs:10:1: warning:
    Pattern match(es) are redundant
    In an equation for ‘f’: f [] = ...

werror.hs:10:1: warning:
    Pattern match(es) are non-exhaustive
    In an equation for ‘f’: Patterns not matched: (_:_)

<no location info>: error: 
Failing due to -Werror.
